feature(search for GetTask and implementation of GetCategory method
